fix issue with un-aligned toc-list__item if selected

--- a/src/article/index.scss
+++ b/src/article/index.scss
@@ -64,6 +64,7 @@ img {
   min-width: 150px;
   margin-bottom: 24px;
   padding-left: 20px;
+  border-left: 2px solid settings.$color-less-light-grey;
 }
 .toc-list__item:last-child {
   margin-bottom: 0px;
